# KiCS2-Mock

./: .gitignore  Mock.hs  MockPrelude.hs  README.md  TestMock.hs  kics2-mock.cabal  notes.lhs
images/: foldValues.ps  foldr.ps
profiling/: Main.prof  MainOld.prof  runMockWOSharing.prof  runMockWSharing.prof  testMock.prof
